# log-stack

./: .gitignore  log-stack.cabal  ranceworks-log.cabal  stack.yaml
app/: Main.hs
test/: tests.hs
