name:               ranceworks-log
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          ranceworks-log
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Add
                    Home

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , parsec

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N

Test-Suite tests
    type:       exitcode-stdio-1.0
    main-is:    tests.hs
    build-depends: base
                 , parsec
                 , mysql-simple
    hs-source-dirs: test
